[package]
name = "ckb-mock-tx-types"
description = "CKB mock transaction types"
version = "0.4.0"
license = "MIT"
edition = "2018"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.104.0"
ckb-jsonrpc-types = "0.104.0"
ckb-traits = "0.104.0"
serde = "1.0"
serde_derive = "1.0"
